@@ -1963,6 +1963,27 @@ ORDER BY inf.rating DESC, img.name ASC
             </dbaction>
 
             <dbaction name="UpdateSchemaFromV7ToV8" mode="transaction">
+                <statement mode="plain">
+                    DROP PROCEDURE IF EXISTS drop_foreign_key;
+                </statement>
+                <statement mode="plain">
+                    CREATE PROCEDURE drop_foreign_key(IN tableName VARCHAR(64), IN constraintName VARCHAR(64))
+                    BEGIN
+                        IF EXISTS(
+                            SELECT * FROM information_schema.table_constraints
+                            WHERE
+                                table_schema    = DATABASE()     AND
+                                table_name      = tableName      AND
+                                constraint_name = constraintName AND
+                                constraint_type = 'FOREIGN KEY')
+                        THEN
+                            SET @query = CONCAT('ALTER TABLE ', tableName, ' DROP FOREIGN KEY ', constraintName, ';');
+                            PREPARE stmt FROM @query;
+                            EXECUTE stmt;
+                            DEALLOCATE PREPARE stmt;
+                        END IF;
+                    END;
+                </statement>
                 <statement mode="plain">ALTER TABLE AlbumRoots MODIFY COLUMN label LONGTEXT CHARACTER SET utf8 COLLATE utf8_bin;</statement>
                 <statement mode="plain">ALTER TABLE AlbumRoots MODIFY COLUMN identifier LONGTEXT CHARACTER SET utf8 COLLATE utf8_bin;</statement>
                 <statement mode="plain">ALTER TABLE AlbumRoots MODIFY COLUMN specificPath LONGTEXT CHARACTER SET utf8 COLLATE utf8_bin;</statement>
@@ -2009,59 +2030,53 @@ ORDER BY inf.rating DESC, img.name ASC
                 <statement mode="plain">ALTER TABLE AlbumRoots
                                         ADD UNIQUE (identifier(127), specificPath(128)),
                                         ENGINE InnoDB;</statement>
+                <statement mode="plain">CALL drop_foreign_key('Albums', 'Albums_AlbumRoots');</statement>
                 <statement mode="plain">ALTER TABLE Albums
-                                        DROP FOREIGN KEY IF EXISTS Albums_AlbumRoots,
                                         DROP INDEX IF EXISTS albumRoot;</statement>
                 <statement mode="plain">ALTER TABLE Albums
                                         ADD CONSTRAINT Albums_AlbumRoots FOREIGN KEY (albumRoot) REFERENCES AlbumRoots (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ADD UNIQUE (albumRoot, relativePath(255)),
                                         ENGINE InnoDB;</statement>
+                <statement mode="plain">CALL drop_foreign_key('Images', 'Images_Albums');</statement>
                 <statement mode="plain">ALTER TABLE Images
-                                        DROP FOREIGN KEY IF EXISTS Images_Albums,
                                         DROP INDEX IF EXISTS album;</statement>
                 <statement mode="plain">ALTER TABLE Images
                                         ADD CONSTRAINT Images_Albums FOREIGN KEY (album) REFERENCES Albums (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ADD UNIQUE (album, name(255)),
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">UPDATE Albums SET icon = null where icon = 0;</statement>
-                <statement mode="plain">ALTER TABLE Albums
-                                        DROP FOREIGN KEY IF EXISTS Albums_Images;</statement>
+                <statement mode="plain">UPDATE Albums SET icon = NULL WHERE icon = 0;</statement>
+                <statement mode="plain">CALL drop_foreign_key('Albums', 'Albums_Images');</statement>
                 <statement mode="plain">ALTER TABLE Albums
                                         ADD CONSTRAINT Albums_Images FOREIGN KEY (icon) REFERENCES Images (id) ON DELETE SET NULL ON UPDATE CASCADE;</statement>
-                <statement mode="plain">ALTER TABLE ImageHaarMatrix
-                                        DROP FOREIGN KEY IF EXISTS ImageHaarMatrix_Images;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageHaarMatrix', 'ImageHaarMatrix_Images');</statement>
                 <statement mode="plain">ALTER TABLE ImageHaarMatrix
                                         ADD CONSTRAINT ImageHaarMatrix_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">ALTER TABLE ImageInformation
-                                        DROP FOREIGN KEY IF EXISTS ImageInformation_Images;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageInformation', 'ImageInformation_Images');</statement>
                 <statement mode="plain">ALTER TABLE ImageInformation
                                         ADD CONSTRAINT ImageInformation_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">ALTER TABLE ImageMetadata
-                                        DROP FOREIGN KEY IF EXISTS ImageMetadata_Images;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageMetadata', 'ImageMetadata_Images');</statement>
                 <statement mode="plain">ALTER TABLE ImageMetadata
                                         ADD CONSTRAINT ImageMetadata_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">ALTER TABLE VideoMetadata
-                                        DROP FOREIGN KEY IF EXISTS VideoMetadata_Images;</statement>
+                <statement mode="plain">CALL drop_foreign_key('VideoMetadata', 'VideoMetadata_Images');</statement>
                 <statement mode="plain">ALTER TABLE VideoMetadata
                                         ADD CONSTRAINT VideoMetadata_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">ALTER TABLE ImagePositions
-                                        DROP FOREIGN KEY IF EXISTS ImagePositions_Images;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImagePositions', 'ImagePositions_Images');</statement>
                 <statement mode="plain">ALTER TABLE ImagePositions
                                         ADD CONSTRAINT ImagePositions_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ENGINE InnoDB;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageComments', 'ImageComments_Images');</statement>
                 <statement mode="plain">ALTER TABLE ImageComments
-                                        DROP FOREIGN KEY IF EXISTS ImageComments_Images,
                                         DROP INDEX IF EXISTS imageid;</statement>
                 <statement mode="plain">ALTER TABLE ImageComments
                                         ADD CONSTRAINT ImageComments_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ADD UNIQUE(imageid, type, language, author(202)),
                                         ENGINE InnoDB;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageCopyright', 'ImageCopyright_Images');</statement>
                 <statement mode="plain">ALTER TABLE ImageCopyright
-                                        DROP FOREIGN KEY IF EXISTS ImageCopyright_Images,
                                         DROP INDEX IF EXISTS imageid;</statement>
                 <statement mode="plain">ALTER TABLE ImageCopyright
                                         ADD CONSTRAINT ImageCopyright_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
@@ -2072,23 +2087,22 @@ ORDER BY inf.rating DESC, img.name ASC
                                         (SELECT MIN(tl.lft) FROM Tags AS tl),
                                         (SELECT MAX(tr.rgt) FROM Tags AS tr));</statement>
                 <statement mode="plain">SET SQL_MODE=@OLD_SQL_MODE;</statement>
-                <statement mode="plain">UPDATE Tags set icon = null where icon = 0;</statement>
+                <statement mode="plain">UPDATE Tags set icon = NULL WHERE icon = 0;</statement>
+                <statement mode="plain">CALL drop_foreign_key('Tags', 'Tags_Images');</statement>
                 <statement mode="plain">ALTER TABLE Tags
-                                        DROP FOREIGN KEY IF EXISTS Tags_Images,
                                         DROP INDEX IF EXISTS pid;</statement>
                 <statement mode="plain">ALTER TABLE Tags
                                         ADD CONSTRAINT Tags_Images FOREIGN KEY (icon) REFERENCES Images (id) ON DELETE SET NULL ON UPDATE CASCADE,
                                         ADD UNIQUE(pid, name(100)),
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">ALTER TABLE ImageTags
-                                        DROP FOREIGN KEY IF EXISTS ImageTags_Images,
-                                        DROP FOREIGN KEY IF EXISTS ImageTags_Tags;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageTags', 'ImageTags_Images');</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageTags', 'ImageTags_Tags');</statement>
                 <statement mode="plain">ALTER TABLE ImageTags
                                         ADD CONSTRAINT ImageTags_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ADD CONSTRAINT ImageTags_Tags FOREIGN KEY (tagid) REFERENCES Tags (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ENGINE InnoDB;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageProperties', 'ImageProperties_Images');</statement>
                 <statement mode="plain">ALTER TABLE ImageProperties
-                                        DROP FOREIGN KEY IF EXISTS ImageProperties_Images,
                                         DROP INDEX IF EXISTS imageid;</statement>
                 <statement mode="plain">ALTER TABLE ImageProperties
                                         ADD CONSTRAINT ImageProperties_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
@@ -2106,26 +2120,22 @@ ORDER BY inf.rating DESC, img.name ASC
                 <statement mode="plain">ALTER TABLE Settings
                                         ADD UNIQUE(keyword(255)),
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">ALTER TABLE ImageHistory
-                                        DROP FOREIGN KEY IF EXISTS ImageHistory_Images;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageHistory', 'ImageHistory_Images');</statement>
                 <statement mode="plain">ALTER TABLE ImageHistory
                                         ADD CONSTRAINT ImageHistory_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">ALTER TABLE ImageRelations
-                                        DROP FOREIGN KEY IF EXISTS ImageRelations_ImagesS,
-                                        DROP FOREIGN KEY IF EXISTS ImageRelations_ImagesO;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageRelations', 'ImageRelations_ImagesS');</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageRelations', 'ImageRelations_ImagesO');</statement>
                 <statement mode="plain">ALTER TABLE ImageRelations
                                         ADD CONSTRAINT ImageRelations_ImagesS FOREIGN KEY (subject) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ADD CONSTRAINT ImageRelations_ImagesO FOREIGN KEY (object) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">ALTER TABLE TagProperties
-                                        DROP FOREIGN KEY IF EXISTS TagProperties_Tags;</statement>
+                <statement mode="plain">CALL drop_foreign_key('TagProperties', 'TagProperties_Tags');</statement>
                 <statement mode="plain">ALTER TABLE TagProperties
                                         ADD CONSTRAINT TagProperties_Tags FOREIGN KEY (tagid) REFERENCES Tags (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ENGINE InnoDB;</statement>
-                <statement mode="plain">ALTER TABLE ImageTagProperties
-                                        DROP FOREIGN KEY IF EXISTS ImageTagProperties_Images,
-                                        DROP FOREIGN KEY IF EXISTS ImageTagProperties_Tags;</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageTagProperties', 'ImageTagProperties_Images');</statement>
+                <statement mode="plain">CALL drop_foreign_key('ImageTagProperties', 'ImageTagProperties_Tags');</statement>
                 <statement mode="plain">ALTER TABLE ImageTagProperties
                                         ADD CONSTRAINT ImageTagProperties_Images FOREIGN KEY (imageid) REFERENCES Images (id) ON DELETE CASCADE ON UPDATE CASCADE,
                                         ADD CONSTRAINT ImageTagProperties_Tags FOREIGN KEY (tagid) REFERENCES Tags (id) ON DELETE CASCADE ON UPDATE CASCADE,
